--- a/index.html
+++ b/index.html
@@ -1089,7 +1089,7 @@
               <div class="modal-callback__inputs">
                 <div class="modal__input">
                   <input name="modal-callback-name" type="text" class="input">
-                  <label for="modal-callback-name" class="input-label">Имя</label>
+                  <label for="modal-callback-name" class="input-label">ФИО</label>
                 </div>
                 <div class="modal__input">
                   <input name="modal-callback-name" type="phone" class="input">
@@ -1182,7 +1182,7 @@
                 <div class="modal-callback__inputs modal-rent__inputs">
                   <div class="modal__input">
                     <input name="modal-callback-name" type="text" class="input" required>
-                    <label for="modal-callback-name" class="input-label">Имя</label>
+                    <label for="modal-callback-name" class="input-label">ФИО</label>
                   </div>
                   <div class="modal__input">
                     <input name="modal-callback-name" type="phone" class="input" required>
@@ -1238,7 +1238,7 @@
               <div class="modal-callback__inputs">
                 <div class="modal__input">
                   <input name="modal-callback-name" type="text" class="input">
-                  <label for="modal-callback-name" class="input-label">Имя</label>
+                  <label for="modal-callback-name" class="input-label">ФИО</label>
                 </div>
                 <div class="modal__input">
                   <input name="modal-callback-name" type="phone" class="input">
