--- a/autopark.html
+++ b/autopark.html
@@ -914,7 +914,7 @@
               <div class="modal-callback__inputs">
                 <div class="modal__input">
                   <input name="modal-callback-name" type="text" class="input">
-                  <label for="modal-callback-name" class="input-label">Имя</label>
+                  <label for="modal-callback-name" class="input-label">ФИО</label>
                 </div>
                 <div class="modal__input">
                   <input name="modal-callback-name" type="phone" class="input">
