--- a/price.html
+++ b/price.html
@@ -424,7 +424,7 @@
               <div class="modal-callback__inputs">
                 <div class="modal__input">
                   <input name="modal-callback-name" type="text" class="input">
-                  <label for="modal-callback-name" class="input-label">Имя</label>
+                  <label for="modal-callback-name" class="input-label">ФИО</label>
                 </div>
                 <div class="modal__input">
                   <input name="modal-callback-name" type="phone" class="input">
@@ -517,7 +517,7 @@
                 <div class="modal-callback__inputs modal-rent__inputs">
                   <div class="modal__input">
                     <input name="modal-callback-name" type="text" class="input" required>
-                    <label for="modal-callback-name" class="input-label">Имя</label>
+                    <label for="modal-callback-name" class="input-label">ФИО</label>
                   </div>
                   <div class="modal__input">
                     <input name="modal-callback-name" type="phone" class="input" required>
