--- a/autopark.html
+++ b/autopark.html
@@ -84,7 +84,7 @@
                         <span class="info__item-text">Подача автомобиля 24/7 </span>
                       </div>
                     </div>
-                    <button class="btn-outline btn-round nav-menu-callback">
+                    <button class="btn-outline btn-round nav-menu-callback modal-open" data-modal-open="callback">
                       <div class="info__callback-img">
                         <img src="img/callback.svg" alt="Обратный звонок">
                       </div>
@@ -949,6 +949,7 @@
                     <div class="input-label select-label"><span>Тип кузова</span></div>
                   </div>
                   <ul class="select__body">
+                    <li class="select-item">Все</li>
                     <li class="select-item">Кабриолет</li>
                     <li class="select-item">Внедорожник</li>
                     <li class="select-item">Седан (Кроссоверы)</li>
@@ -961,7 +962,9 @@
                     <div class="input-label select-label"><span>Коробка передач</span></div>
                   </div>
                   <ul class="select__body">
+                    <li class="select-item">Все</li>
                     <li class="select-item">Механическая</li>
+                    <li class="select-item">Автоматическая</li>
                   </ul>
                 </div>
                 <div class="select main__select autopark__select-car">
@@ -971,6 +974,7 @@
                     <div class="input-label select-label"><span>Пассажиры</span></div>
                   </div>
                   <ul class="select__body">
+                    <li class="select-item">Все</li>
                     <li class="select-item">2 места</li>
                     <li class="select-item">4 места</li>
                     <li class="select-item">6 мест</li>
@@ -985,6 +989,7 @@
                     <div class="input-label select-label"><span>Объем багажника</span></div>
                   </div>
                   <ul class="select__body">
+                    <li class="select-item">Все</li>
                     <li class="select-item">1 чемодан</li>
                     <li class="select-item">2 чемодана</li>
                     <li class="select-item">3 чемодана</li>
