--- a/contacts.html
+++ b/contacts.html
@@ -84,7 +84,7 @@
                         <span class="info__item-text">Подача автомобиля 24/7 </span>
                       </div>
                     </div>
-                    <button class="btn-outline btn-round nav-menu-callback">
+                    <button class="btn-outline btn-round nav-menu-callback modal-open" data-modal-open="callback">
                       <div class="info__callback-img">
                         <img src="img/callback.svg" alt="Обратный звонок">
                       </div>
