--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <span class="info__item-text">Подача автомобиля 24/7 </span>
                       </div>
                     </div>
-                    <button class="btn-outline btn-round nav-menu-callback">
+                    <button class="btn-outline btn-round nav-menu-callback modal-open" data-modal-open="callback">
                       <div class="info__callback-img">
                         <img src="img/callback.svg" alt="Обратный звонок">
                       </div>
@@ -124,19 +124,12 @@
                     <li class="select-item">Nissan Murano</li>
                   </ul>
                 </div>
-                <div class="select main__select main__select-day">
-                  <div class="input select__header">
-                    <span class="select-current">1</span>
-                    <span class="select-icon"><img src="img/select-arrow.svg" alt="стрелка"></span>
+                <div class="main__select main__select-day">
+                  <div class="input select__header select-current-input">
+                    <input class="select-current" type="number" value="1" min="1">
+                    <!-- <span class="select-icon"><img src="img/select-arrow.svg" alt="стрелка"></span> -->
                     <div class="input-label select-label"><span class="select-label-text">Сутки</span></div>
                   </div>
-                  <ul class="select__body">
-                    <li class="select-item">1</li>
-                    <li class="select-item">2</li>
-                    <li class="select-item">3</li>
-                    <li class="select-item">4</li>
-                    <li class="select-item">5</li>
-                  </ul>
                 </div>
               </div>
             </div>
