--- a/price.html
+++ b/price.html
@@ -84,7 +84,7 @@
                         <span class="info__item-text">Подача автомобиля 24/7 </span>
                       </div>
                     </div>
-                    <button class="btn-outline btn-round nav-menu-callback">
+                    <button class="btn-outline btn-round nav-menu-callback modal-open" data-modal-open="callback">
                       <div class="info__callback-img">
                         <img src="img/callback.svg" alt="Обратный звонок">
                       </div>
@@ -169,7 +169,7 @@
           <h2>Необходимые документы</h2>
           <p>— для граждан РФ: Паспорт РФ, действующая прописка, Водительское удостоверение <br><br> — для иностранных граждан: Заграничный паспорт, Водительское удостоверение международного образца</p>
           <h3>Дополнительное описание H3</h3>
-          <p>Компания предоставляет всем жителям полуострова и гостям Крыма услуги недорогого автопроката.  У нас можно взять машину в аренду на сутки, неделю или несколько месяцев. Не отказывайте себе в свободе передвижения: арендуйте современные исправные авто на время отпуска, командировки, или пока ваш автомобиль находится в ремонте. К вашим услугам – большой автопарк новых автомобилей, более чем адекватные цены и отличный качественный сервис.</p>
+          <p>Компания предоставляет всем жителям полуострова и гостям Крыма услуги недорогого автопроката. У нас можно взять машину в аренду на сутки, неделю или несколько месяцев. Не отказывайте себе в свободе передвижения: арендуйте современные исправные авто на время отпуска, командировки, или пока ваш автомобиль находится в ремонте. К вашим услугам – большой автопарк новых автомобилей, более чем адекватные цены и отличный качественный сервис.</p>
           <h2 id="condition">Условия аренды</h2>
           <ul class="rental__services price__services">
             <li class="rental__service modal-open" data-modal-open="condition" data-rental-info="money">
